# tauri_ios_plugins

./: .gitignore  BAROMETER_PLUGIN_LESSONS.md  CAMERA_API_ANALYSIS.md  COREMOTION_QUICK_FIX_GUIDE.md  COREMOTION_TYPE_AMBIGUITY_ANALYSIS.md  Cargo.toml  EXAMPLE_APP.md  FINAL_REVIEW_REPORT.md  PLUGIN_COMPILATION_REPORT.md  PLUGIN_REVIEW_REPORT.md  README.md  REVIEW_SUMMARY.md  TAURI_PLUGIN.md  TESTING_GUIDE.md  TEST_PLAN.md  check_plugins.sh  comprehensive_fix.py  detailed_check.sh  fix_coremotion_types.py  fix_dependencies.sh  fix_dependencies_proper.py  plugin_analysis.py  process_plugins.sh  recreate_plugins.sh  test_all_plugins.sh  test_swift_compile.sh  test_warnings.sh  update_plugin_configs.sh
crates/shared/: Cargo.toml
crates/shared/src/: date.rs  lib.rs  permissions.rs
example/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: lib.rs
plugins/tauri-plugin-ios-barometer/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-barometer/guest-js/: index.ts
plugins/tauri-plugin-ios-barometer/ios/: Package.swift
plugins/tauri-plugin-ios-barometer/ios/Sources/: BarometerPlugin.swift
plugins/tauri-plugin-ios-barometer/permissions/autogenerated/: reference.md
plugins/tauri-plugin-ios-barometer/permissions/schemas/: schema.json
plugins/tauri-plugin-ios-barometer/src/: commands.rs  desktop.rs  lib.rs
plugins/tauri-plugin-ios-bluetooth/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-bluetooth/examples/tauri-app/: package.json
plugins/tauri-plugin-ios-bluetooth/guest-js/: index.ts
plugins/tauri-plugin-ios-bluetooth/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-bluetooth/src/: desktop.rs  lib.rs  mobile.rs
plugins/tauri-plugin-ios-callkit/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-ios-callkit/guest-js/: index.ts
plugins/tauri-plugin-ios-callkit/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-callkit/src/: commands.rs
plugins/tauri-plugin-ios-camera/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-ios-camera/guest-js/: index.ts
plugins/tauri-plugin-ios-camera/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-camera/src/: commands.rs  desktop.rs  error.rs  lib.rs
plugins/tauri-plugin-ios-contacts/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-ios-contacts/guest-js/: index.ts
plugins/tauri-plugin-ios-contacts/ios/: Package.swift
plugins/tauri-plugin-ios-contacts/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-ios-files/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-files/guest-js/: index.ts
plugins/tauri-plugin-ios-files/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-files/src/: commands.rs  desktop.rs  error.rs  mobile.rs
plugins/tauri-plugin-ios-healthkit/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-ios-healthkit/guest-js/: index.ts
plugins/tauri-plugin-ios-healthkit/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-healthkit/src/: error.rs  mobile.rs
plugins/tauri-plugin-ios-keychain/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-keychain/guest-js/: index.ts
plugins/tauri-plugin-ios-keychain/ios/: Package.swift
plugins/tauri-plugin-ios-keychain/src/: commands.rs  desktop.rs  error.rs  mobile.rs
plugins/tauri-plugin-ios-location/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-ios-location/ios/: Package.swift
plugins/tauri-plugin-ios-location/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-ios-messages/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-messages/guest-js/: index.ts
plugins/tauri-plugin-ios-messages/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-messages/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
plugins/tauri-plugin-ios-microphone/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-ios-microphone/ios/: Package.swift
plugins/tauri-plugin-ios-microphone/src/: desktop.rs  lib.rs  mobile.rs
plugins/tauri-plugin-ios-motion/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-ios-motion/guest-js/: index.ts
plugins/tauri-plugin-ios-motion/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-motion/src/: commands.rs  desktop.rs  lib.rs
plugins/tauri-plugin-ios-music/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-music/guest-js/: index.ts
plugins/tauri-plugin-ios-music/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-music/src/: commands.rs  desktop.rs  mobile.rs  models.rs
plugins/tauri-plugin-ios-photos/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-photos/guest-js/: index.ts
plugins/tauri-plugin-ios-photos/ios/: Package.swift
plugins/tauri-plugin-ios-photos/src/: commands.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-ios-proximity/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-proximity/guest-js/: index.ts
plugins/tauri-plugin-ios-proximity/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-proximity/src/: commands.rs  lib.rs  mobile.rs
plugins/tauri-plugin-ios-screentime/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-screentime/guest-js/: index.ts
plugins/tauri-plugin-ios-screentime/ios/: Package.swift
plugins/tauri-plugin-ios-screentime/src/: commands.rs  error.rs  lib.rs  mobile.rs
plugins/tauri-plugin-ios-shortcuts/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ios-shortcuts-v2/: Cargo.toml  README.md  package.json
plugins/tauri-plugin-ios-shortcuts-v2/guest-js/: index.ts
plugins/tauri-plugin-ios-shortcuts-v2/ios/: Package.swift
plugins/tauri-plugin-ios-shortcuts-v2/src/: commands.rs  desktop.rs  lib.rs
plugins/tauri-plugin-ios-shortcuts/guest-js/: index.ts
plugins/tauri-plugin-ios-shortcuts/ios/: Package.swift  README.md
plugins/tauri-plugin-ios-shortcuts/src/: error.rs  mobile.rs  models.rs
(+559 files in other folders)
