[package]
name = "example"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# iOS Plugins
tauri-plugin-ios-healthkit = { path = "../../plugins/tauri-plugin-ios-healthkit" }
tauri-plugin-ios-contacts = { path = "../../plugins/tauri-plugin-ios-contacts" }
tauri-plugin-ios-camera = { path = "../../plugins/tauri-plugin-ios-camera" }
tauri-plugin-ios-microphone = { path = "../../plugins/tauri-plugin-ios-microphone" }
tauri-plugin-ios-location = { path = "../../plugins/tauri-plugin-ios-location" }
tauri-plugin-ios-photos = { path = "../../plugins/tauri-plugin-ios-photos" }
tauri-plugin-ios-music = { path = "../../plugins/tauri-plugin-ios-music" }
tauri-plugin-ios-keychain = { path = "../../plugins/tauri-plugin-ios-keychain" }
tauri-plugin-ios-screentime = { path = "../../plugins/tauri-plugin-ios-screentime" }
tauri-plugin-ios-files = { path = "../../plugins/tauri-plugin-ios-files" }
tauri-plugin-ios-messages = { path = "../../plugins/tauri-plugin-ios-messages" }
tauri-plugin-ios-callkit = { path = "../../plugins/tauri-plugin-ios-callkit" }
tauri-plugin-ios-bluetooth = { path = "../../plugins/tauri-plugin-ios-bluetooth" }
tauri-plugin-ios-shortcuts = { path = "../../plugins/tauri-plugin-ios-shortcuts" }
tauri-plugin-ios-widgets = { path = "../../plugins/tauri-plugin-ios-widgets" }
tauri-plugin-ios-motion = { path = "../../plugins/tauri-plugin-ios-motion" }
tauri-plugin-ios-barometer = { path = "../../plugins/tauri-plugin-ios-barometer" }
tauri-plugin-ios-proximity = { path = "../../plugins/tauri-plugin-ios-proximity" }

