[package]
name = "tauri-plugin-ios-barometer"
links = "tauri-plugin-ios-barometer"
version = "0.1.0"
edition = "2021"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
description = "Tauri plugin for iOS barometric pressure sensor"
repository = "https://github.com/tauri-apps/tauri-plugin-ios-barometer"

[lib]
name = "tauri_plugin_ios_barometer"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }

[dev-dependencies]
tauri = { version = "2.1.1", features = ["test"] }