[package]
name = "tauri-plugin-ios-bluetooth"
version = "0.1.0"
authors = [ "Tauri Plugin iOS" ]
description = "Access bluetooth APIs on iOS for Tauri applications"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ios-bluetooth"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
