[package]
name = "tauri-plugin-ios-camera"
links = "tauri-plugin-ios-camera"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Tauri plugin for accessing iOS Camera and Photo Library"
keywords = ["tauri", "plugin", "ios", "camera", "photos"]

[lib]
name = "tauri_plugin_ios_camera"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }