[package]
name = "tauri-plugin-ios-contacts"
links = "tauri-plugin-ios-contacts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Tauri plugin for accessing iOS Contacts API"
keywords = ["tauri", "plugin", "ios", "contacts", "addressbook"]

[lib]
name = "tauri_plugin_ios_contacts"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }