[package]
name = "tauri-plugin-ios-keychain"
links = "tauri-plugin-ios-keychain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Tauri plugin for iOS Keychain Services"
keywords = ["tauri", "plugin", "ios", "keychain", "security"]

[lib]
name = "tauri_plugin_ios_keychain"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = "0.8"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }