[package]
name = "tauri-plugin-ios-keychain"
version = "0.1.0"
authors = [ "Tauri Plugin iOS" ]
description = "Access keychain APIs on iOS for Tauri applications"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ios-keychain"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
rand = "0.8"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
