[package]
name = "tauri-plugin-ios-music"
links = "tauri-plugin-ios-music"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Tauri plugin for iOS Music Library and Apple Music"
keywords = ["tauri", "plugin", "ios", "music", "media"]

[lib]
name = "tauri_plugin_ios_music"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }