[package]
name = "tauri-plugin-ios-photos"
links = "tauri-plugin-ios-photos"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Tauri plugin for iOS Photos framework"
keywords = ["tauri", "plugin", "ios", "photos", "media"]

[lib]
name = "tauri_plugin_ios_photos"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }