[package]
name = "tauri-plugin-ios-screentime"
version = "0.1.0"
authors = [ "Tauri Plugin iOS" ]
description = "Access screentime APIs on iOS for Tauri applications"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ios-screentime"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
