[package]
name = "tauri-plugin-ios-shortcuts"
version = "0.1.0"
authors = [ "Tauri Plugin iOS" ]
description = "Access shortcuts APIs on iOS for Tauri applications"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ios-shortcuts"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
